--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.11.2"
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "ethers": "^5.7.1",
+    "hardhat": "^2.11.2",
+    "hardhat-deploy": "^0.11.15"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3"
