--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
     "hardhat-deploy": "^0.11.15"
